[project]
name = "quant-finance-toolkit"
version = "0.1.0"
description = "A comprehensive quantitative finance toolkit for pricing, portfolio optimization, risk management, and stochastic modeling"
readme = "README.md"
authors = [
    { name = "KostasCherv", email = "kostasxerv@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "yfinance>=0.2.0",
    "plotly>=5.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
